--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "isomorphic-fetch": "^3.0.0",
     "normalize.css": "^8.0.1",
     "prettier-eslint": "^16.3.0",
     "react": "^18.2.0",
